--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 	<script src="js/thirdparty/underscore-min.js"></script>
 	<script src="js/thirdparty/leaflet.js"></script>
-	<script src="data/ca_hex_2000_ided_hexes.js"></script>
+	<script src="http://d3js.org/d3.v3.min.js"></script>
+	<script src="js/thirdparty/moment.js"></script>
+	<script src="js/thirdparty/jquery.ba-bbq.min.js"></script>
 </head>
 <body>
 
 	<div id="map-canvas"></div>
+	<audio id="noise" src="sound/crashes-v1.mp3"></audio>
 
 	<script src="js/app.js"></script>
 </body>
