--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <body>
 
 	<div id="map-canvas"></div>
-	<audio id="noise" src="sound/crashes-v1.mp3"></audio>
-
+<!-- 	<audio id="noise" src="sound/crashes-v1.mp3"></audio>
+ -->
 	<script src="js/app.js"></script>
 </body>
 </html>
