--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <body>
 
 	<div id="map-canvas"></div>
+	<div id="date-show"></div>
 <!-- 	<audio id="noise" src="sound/crashes-v1.mp3"></audio>
  -->
 	<script src="js/app.js"></script>
